--- a/src/Accordion.mdx
+++ b/src/Accordion.mdx
@@ -14,19 +14,7 @@ import * as AccordionStories from './Accordion.stories';
 
 A vertically stacked set of interactive headings that each reveal a section of content.
 
-## Usage
-
-The Accordion component is useful for:
-
-- Organizing related content into collapsible sections
-- Reducing visual clutter in content-heavy interfaces
-- Creating FAQ sections or similar expandable content areas
-
-## Example
-
-<Canvas>
-  <Story of={AccordionStories.Default} />
-</Canvas>
+<Canvas of={AccordionStories.Default} />
 
 <Controls />
 
