--- a/src/Accordion.mdx
+++ b/src/Accordion.mdx
@@ -1,43 +1,23 @@
-import { Meta, Story, Canvas, Controls } from '@storybook/blocks';
+import { Meta, Story, Canvas, Controls, Stories } from '@storybook/blocks';
 import * as AccordionStories from './Accordion.stories';
 
-<Meta
-  of={AccordionStories}
-  title="Components/Accordion"
-  tags={['autodocs']}
-  parameters={{
-    componentSubtitle: 'An expandable/collapsible content container',
-    status: { type: 'stable' },
-  }}
-/>
+<Meta of={AccordionStories} />
 
 # Accordion
 
 A vertically stacked set of interactive headings that each reveal a section of content.
 
+```tsx
+<Accordion>
+  <Accordion.Item>
+    <Accordion.Trigger>Section 1</Accordion.Trigger>
+    <Accordion.Content>Content for section 1</Accordion.Content>
+  </Accordion.Item>
+</Accordion>
+```
+
 <Canvas of={AccordionStories.Default} />
 
 <Controls />
 
-## Usage
-
-```tsx
-import { Accordion } from '@styleshift/accordion';
-
-function Example() {
-  return (
-    <Accordion type="single" collapsible>
-      <Accordion.Item value="item-1">
-        <Accordion.Trigger>Section 1</Accordion.Trigger>
-        <Accordion.Content>Content for section 1</Accordion.Content>
-      </Accordion.Item>
-    </Accordion>
-  );
-}
-```
-
-## API
-
-### Component Props
-
-<Controls of={AccordionStories.Default} />
+<Stories />
