--- a/src/Accordion.mdx
+++ b/src/Accordion.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas, Controls, Stories } from '@storybook/blocks';
+import { Canvas, Controls, Meta, Stories } from '@storybook/blocks';
 import * as AccordionStories from './Accordion.stories';
 
 <Meta of={AccordionStories} />
